--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@next-auth/mongodb-adapter": "^1.1.1",
+    "@tanstack/react-query": "^4.29.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -26,6 +27,11 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.7"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
