--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@tanstack/react-query": "^4.29.1",
+    "@tanstack/react-query-devtools": "^4.29.5",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -27,6 +28,7 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io-client": "^4.6.1",
     "typescript": "5.0.3",
     "uuid": "^9.0.0",
     "zustand": "^4.3.7"
