--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "socket.io-client": "^4.6.1",
     "typescript": "5.0.3",
     "uuid": "^9.0.0",
@@ -38,6 +40,7 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@types/react-window": "^1.8.5",
     "@types/uuid": "^9.0.1"
   }
 }
